# TheArtvertiser

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  Makefile_BUP  README  acinclude.m4  aclocal.m4  addons.make  angstrom  artvertiser.cbp  artvertiser.icns  artvertiser.layout  artvertiser.rc  artvertiser_win_cb.cbp  artvertiser_win_cb.workspace  autogen.sh  captureFromCam  captureFromCam-test-mask.cpp  captureFromCam.cpp  config.h  config.h.in  config.status  configure  configure.ac  image-warp  image-warp.cpp  makefile  mencoder-capture.sh  mplayer-capture.sh  mplayer-playback-raw.sh  openFrameworks-Info.plist  osx_prereqs.txt
artvertiser/: .Makefile.swp  .artvertiser.cpp.swp  .calibmodel.cpp.swp  .multigrab.cpp.swp  .multigrab.h.swp  Artvert.cpp  Artvert.h  ArtvertList.cpp  ArtvertList.h  Makefile  Makefile.am  Makefile.in  Makefile.linux  Makefile.osx  Makefile_BUP  ThreadSafeString.cpp  ThreadSafeString.h  artvertiser  artvertiser.cpp  artvertiser.cpp_BUP  artvertiser.h  avImage.cpp  avImage.h  calibmodel.cpp  calibmodel.h  camera_c.txt  camera_r_t.txt  deleteme.bmp.roi  draw.cpp  encode-from-glc-to-mpeg4.sh  framerate.h  glc-capture  glc-play  glm.h  gmon.out  gprofile  lightParams.mat  matrixtracker.cpp  model.bmp.roi  models.xml  (+11 more)
artvertiser/.deps/: artvertiser-artvertiser.Po  artvertiser-calibmodel.Po  artvertiser-glm.Tpo  artvertiser-multigrab.Po  artvertiser-multithreadcapture.Po  multicam-calibmodel.Po  multicam-multicam.Po  multicam-multigrab.Po  multigl-calibmodel.Po  multigl-multigl.Po  multigl-multigrab.Po
artvertiser/FProfiler/: FProfiler.cpp  FProfiler.h  FSemaphore.h  FThread.cpp  FThread.h  FTime.cpp  FTime.h  Makefile  Makefile.linux  Makefile.osx
artvertiser/MatrixTracker/: Makefile  Makefile.osx  MatrixTracker.cpp  MatrixTracker.h  ofxMatrix3x3.cpp  ofxMatrix3x3.h  ofxMatrix4x4.cpp  ofxMatrix4x4.h  ofxPoint2f.h  ofxPoint3f.h  ofxPoint4f.h  ofxQuaternion.cpp  ofxQuaternion.h  ofxVec2f.h  ofxVec3f.h  ofxVec4f.h  ofxVectorMath.h
artvertiser/camparams_HF10/: camera_c.txt  camera_r_t.txt  view_r_t.txt
artvertiser/camparams_qc9000_damian/: camera_r_t.txt  view_r_t.txt
artvertiser/camparams_wideangle/: camera_c.txt  camera_r_t.txt  view_r_t.txt
artvertiser/deleteme.bmp.classifier/: keypoints.txt  misclassification_rates.txt  thresholds.txt  tree0000.txt  tree0001.txt  tree0002.txt  tree0003.txt  tree0004.txt  tree0005.txt  tree0006.txt  tree0007.txt  tree0008.txt  tree0009.txt  tree0010.txt  tree0011.txt  tree0012.txt  tree0013.txt  tree0014.txt  tree0015.txt  tree0016.txt  tree0017.txt  tree0018.txt  tree0019.txt  tree0020.txt  tree0021.txt  tree0022.txt  tree0023.txt  tree0024.txt  tree0025.txt  tree0026.txt  tree0027.txt  tree0028.txt  tree0029.txt  weights.txt
artvertiser/images/: your-art-here-square.xcf  your-art-here.xcf
artvertiser/model.bmp.classifier/: corners.txt  keypoints.txt  misclassification_rates.txt  thresholds.txt  tree0000.txt  tree0001.txt  tree0002.txt  tree0003.txt  tree0004.txt  tree0005.txt  tree0006.txt  tree0007.txt  tree0008.txt  tree0009.txt  tree0010.txt  tree0011.txt  weights.txt
artvertiser/models/: ships.bmp.roi
artvertiser/ofxGstVideoRecorder/: Makefile  Makefile.linux  ofGstUtils.cpp  ofGstUtils.h  ofxGstVideoRecorder.cpp  ofxGstVideoRecorder.h
artvertiser/ofxXmlSettings/: Makefile  Makefile.linux  ofxXmlSettings.cpp  ofxXmlSettings.h
doc/: Doxyfile  (+6 more)
garfeild/: Makefile  Makefile.am  Makefile.in  Makefile.osx  garfeild.h  garfeild.pc  garfeild.pc.in
garfeild/.deps/: CamAugmentation.Po  CamCalibration.Po  affine_image_generator.Po  camera.Po  gradient.Po  image_class_example.Po  image_classification_forest.Po  image_classification_node.Po  image_classification_tree.Po  image_classifier.Po  ipltexture.Po  keypoint_orientation_corrector.Po  lightcollector.Po  lightmap.Po  matvec.Po  object_view.Po  planar_object_recognizer.Po  tri.Po  yape.Po
garfeild/calib/: CamAugmentation.cpp  CamAugmentation.h  CamCalibration.cpp  CamCalibration.h  camera.cpp  camera.h  gradient.cpp  matvec.cpp  matvec.h
garfeild/keypoints/: keypoint.h  keypoint_match.h  keypoint_orientation_corrector.cpp  keypoint_orientation_corrector.h  yape.cpp  yape.h
garfeild/lightcalib/: ipltexture.cpp  ipltexture.h  lightcalib.h  lightcollector.cpp  lightcollector.h  lightmap.cpp  lightmap.h  tri.cpp
garfeild/viewsets/: .affine_image_generator.cpp.swp  .planar_object_recognizer.cpp.swp  affine_image_generator.cpp  affine_image_generator.h  cvplanardetect.cpp  cvplanardetect.h  example_generator.h  image_class_example.cpp  image_class_example.h  image_classification_forest.cpp  image_classification_forest.h  image_classification_node.cpp  image_classification_node.h  image_classification_tree.cpp  image_classification_tree.h  image_classifier.cpp  image_classifier.h  image_object_point_match.h  object_keypoint.h  object_view.cpp  object_view.h  planar_object_recognizer.cpp  planar_object_recognizer.h
starter/: Makefile  Makefile.am  Makefile.in  Makefile.linux  starter.h  starter.pc  starter.pc.in
starter/.deps/: affinity.Po  growmat.Po  homography.Po  linear_algebra.Po  linear_systems.Po  ls_minimizer2.Po  ls_step_solver.Po  mcv.Po  mcvm.Po  polynom_solver.Po  projection_matrix.Po  pyrimage.Po
starter/general/: general.h
starter/geometry/: affinity.cpp  affinity.h  homography.cpp  homography.h  projection_matrix.cpp  projection_matrix.h
starter/image/: mcv.cpp  mcv.h  pyrimage.cpp  pyrimage.h
starter/math/: growmat.cpp  growmat.h  linear_algebra.cpp  linear_algebra.h  linear_systems.cpp  linear_systems.h  mcvm.cpp  mcvm.h  polynom_solver.cpp  polynom_solver.h  robust_estimators.h
starter/optimization/: ls_minimizer.h  ls_minimizer2.cpp  ls_minimizer2.h  ls_step_solver.cpp  ls_step_solver.h  observation_types.h  (+1 more)
(+1002 files in other folders)
